--- a/staticpage_3697.html
+++ b/staticpage_3697.html
@@ -68,7 +68,7 @@ img {
 
   <!-- Header Starts Here -->
 
-  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/back_btn.png" alt="home icon" /></a>
+  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/home_icon.png" alt="home icon" /></a>
 
     <h1>StaticPage</h1>
 
@@ -80,13 +80,20 @@ img {
 
   
 
-  <div class="staticPage">
+  <div class="staticPageList">
+<ul data-role="listview" >
+	 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_3697_7147.html">
+                                	<img src="http://app-gorilla.com/members/wizard/mediafiles/amitoj_4_43/thumb/amitoj_4_1394526968_256x256.jpg" class="ui-li-thumb">
+                                <h2>
+                StaticPage                </h2>
+                <p>test new part here to test that added functionlity some sort of addresstest</p>
+                
+            </a></li>
+	
+	
+</ul>
+</div>
 
-  
-
-  test new part here to test that added functionlity some sort of address test new part here to test that added functionlity some sort of addresstest new part here to test that added functionlity some sort of addresstest new part here to test that added functionlity some sort of addresstest new part here to test that added functionlity some sort of addresstest new part here to test that added functionlity some sort of addresstest new part here to test that added functionlity some sort of addresstest new part here to test that added functionlity some sort of addresstest new part here to test that added functionlity some sort of addresstest new part here to test that added functionlity some sort of addresstest new part here to test that added functionlity some sort of addresstest new part here to test that added functionlity some sort of addresstest new part here to test that added functionlity some sort of addresstest new part here to test that added functionlity some sort of addresstest new part here to test that added functionlity some sort of address<img src="http://i.imgur.com/NP9snDh.jpg" width="336">test new part here to test that added functionlity some sort of addresstest new part here to test that added functionlity some sort of address
-
-  </div>
 
   
 
