--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ img {
 
 			<div class="app_feature_list">
 			<a  rel="external" data-ajax="flase"  class="item link" href="photosub_3695.html">
-																	<img src="images/photosub.png " />
+																	<img src="icon(22).png" />
 										</a>
 		<a  rel="external" data-ajax="flase"  href="photosub_3695.html">
 				<label>Photos</label>
@@ -112,6 +112,15 @@ img {
 										</a>
 		<a  rel="external" data-ajax="flase"  href="video_3696.html">
 				<label>Videos</label>
+		</a>
+	</div>
+
+			<div class="app_feature_list">
+			<a  rel="external" data-ajax="flase"  class="item link" href="staticpage_3697.html">
+																	<img src="images/staticpage.png " />
+										</a>
+		<a  rel="external" data-ajax="flase"  href="staticpage_3697.html">
+				<label>StaticPage</label>
 		</a>
 	</div>
 
