--- a/video_3696.html
+++ b/video_3696.html
@@ -86,7 +86,7 @@ $(document).ready(function(){
 
   <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/home_icon.png" alt="home icon" /></a>
 
-    <h1>Video</h1>
+    <h1>Videos</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -98,7 +98,7 @@ $(document).ready(function(){
 
   <a href="index.html" class="refresh_link ui-link ui-btn-left ui-btn ui-shadow ui-corner-all" data-role="button" rel="external" data-ajax="false" role="button"><img alt="home icon" src="images/home_icon.png"></a>
 
-    <h1>Video</h1>
+    <h1>Videos</h1>
 
     <a class="help_link ui-link ui-btn-right ui-btn ui-shadow ui-corner-all" data-role="button" role="button"><img alt="help icon" src="images/help_icon.png"></a> </div>
 
@@ -114,7 +114,15 @@ $(document).ready(function(){
 
 	
 
-			<p class="no_data">No video upload</p>
+			    <ul data-role="listview"><li><a href='video_detail_114.html'><img src='https://i.ytimg.com/vi/eLtuEGs0OFI/hqdefault.jpg'  /><h2>"NEW" Chucky Gordon - I Never Wine [Trinidad Soca 2013] [HD]</h2><p>"NEW" Chucky Gordon - I Never Wine Producer:Redboyz soca 2013 soca 2012.</p></a></li><li><a href='video_detail_115.html'><img src='https://i.ytimg.com/vi/2iw30ssAnyk/hqdefault.jpg'  /><h2>"NEW SOCA 2013" K-RICH - WINE BACK [HD]</h2><p>"NEW SOCA 2013" K-RICH - WINE BACK TRNINIDAD SOCA 2013 for more videos and info visit http://bit.ly/</p></a></li><li><a href='video_detail_116.html'><img src='https://i.ytimg.com/vi/7PChVJ_GxKE/hqdefault.jpg'  /><h2>"New" Mr Renzo feat. Aidonia - Bend Ya Back "Soca 2013" [HD]</h2><p>PLEASE SUBSCRIBE FOR MORE VIDEOS AND INTERVIEWS http://goo.gl/I43fze SUBSCRIBE http://goo.gl/I43fze </p></a></li><li><a href='video_detail_263.html'><img src='https://i.ytimg.com/vi/0vrdgDdPApQ/hqdefault.jpg'  /><h2>Sample 4k UHD (Ultra HD) video download</h2><p>To purchase any of the clips featured in this reel, go to: http://stockfootage.com/product-category/</p></a></li><li><a href='video_detail_498.html'><img src='https://i1.ytimg.com/vi/vU8jUKc0Xbk/hqdefault.jpg'  /><h2>Annoying Orange Let's Play! - MINECRAFT</h2><p>HEY! Play my new mobile game Splatter Up now! It's FREE!
+FREE iOS Splatter Up: http://bit.ly/Splatte</p></a></li><li><a href='video_detail_499.html'><img src='https://i1.ytimg.com/vi/LYdk2vwyEuk/hqdefault.jpg'  /><h2>Annoying Orange Vs. Fruit Ninja</h2><p>NINJA SMOKE! HAHAHA!
+
+MERCH: http://bit.ly/18PhFlH
+T-SHIRTS! http://bit.ly/AOMerch
+MUSIC! http://bit</p></a></li><li><a href='video_detail_500.html'><img src='https://i1.ytimg.com/vi/X2bA1O6Oj7E/hqdefault.jpg'  /><h2>Annoying Orange - Annoying Orange vs Duck Hunt</h2><p>Orange takes on a fowl situation. HA. Get it? FOWL?
+The Annoying Orange DVD is here!!! http://youtu.</p></a></li><li><a href='video_detail_501.html'><img src='https://i1.ytimg.com/vi/j521FwIsAM8/hqdefault.jpg'  /><h2>Annoying Orange - Annoying Orange Vs. Minecraft</h2><p>HEY! Play my new mobile game Splatter Up now! It's FREE!
+FREE iOS Splatter Up: http://bit.ly/Splatte</p></a></li></ul>
+
 
             
 
